# boriy_core

./: Cargo.toml  README.md
.github/workflows/: CI.yml
core_py/: Cargo.toml  pyproject.toml
core_py/examples/: add_sheet.py  apply_helper_class.py  apply_helper_dict.py
core_py/python/boriy_core/: __init__.py  _boriy_core.pyi
core_py/src/: helper.rs  lib.rs  services.rs  types.rs
core_rs/examples/: add_xlsx_sheet.rs
core_rs/src/: types.rs
