[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "boriy_core"
description = "Core functionality for Boriy"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    'Programming Language :: Python :: 3.12',
    'Operating System :: POSIX :: Linux',
    'Operating System :: MacOS',
]
dynamic = ["version", "readme"]
authors = [
    { email = "stalex.info@yandex.ru" },
    { name = "Alexander Starovoytov" },
]

[tool.maturin]
python-source = "python"
module-name = "boriy_core._boriy_core"

bindings = "pyo3"
strip = true

features = ["pyo3/extension-module"]
